# fastapi-tdd-docker

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: db.py  main.py  settings.py  summarizer.py
app/api/: crud.py  ping.py  summaries.py
tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
